FINISH ALL WEB CONTENTTTT

--- a/gallery.html
+++ b/gallery.html
@@ -79,18 +79,43 @@
     </div>
 </div>
 
-<div class="photos">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-    <img src="" alt="" class="photo">
-</div>
-    
+<div class="row"> 
+    <div class="column">
+      <img src="/photos/IMG_0001_edited.jpeg" style="width:100%">
+      <img src="photos/IMG_0004_edited.jpeg" style="width:100%">
+      <img src="photos/IMG_0006_edited.jpeg" style="width:100%">
+      <img src="photos/IMG_0008_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0009_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0010_edited.jpeg" style="width:100%">
+    </div>
+    <div class="column">
+        <img src="/photos/IMG_0011_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0013_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0014_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0017_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0020_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0022_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0023_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0024_edited.jpeg" style="width:100%">
+    </div>  
+    <div class="column">
+        <img src="/photos/IMG_0030_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0035_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0044_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0061_edited.jpeg" style="width:100%">
+      <img src="bfeast_img.jpeg" alt="" style="width: 100%;">
+
+    </div>
+    <div class="column">
+      <img src="/photos/IMG_0062_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0063_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_9975_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_9988_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_9993_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0054_edited.jpeg" style="width:100%">
+      <img src="/photos/IMG_0048_edited.jpeg" style="width:100%">
+    </div>
+  </div>
+  
 </body>
 </html>
