--- a/about.html
+++ b/about.html
@@ -11,8 +11,27 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="about.css">
-    <title>RCCG TCON</title>
+<!-- Primary Meta Tags -->
+<title>RCCG TCON</title>
+<meta name="title" content="RCCG TCON">
+<meta name="description"
+    content="Welcome to RCCG The Chapel Outreach parish in Norwich, United Kingdom (RCCG TCON). We have the mandate to build people spiritually and train them to discover, develop and deploy their God given gift to serve God and the community. We provide a lovely and friendly atmosphere where people from the various nations of the world can experience the true love of Christ and understand God's purpose for their lives.">
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rccgtcon.com">
+<meta property="og:title" content="RCCG TCON">
+<meta property="og:description"
+    content="Welcome to RCCG The Chapel Outreach parish in Norwich, United Kingdom (RCCG TCON). We have the mandate to build people spiritually and train them to discover, develop and deploy their God given gift to serve God and the community. We provide a lovely and friendly atmosphere where people from the various nations of the world can experience the true love of Christ and understand God's purpose for their lives.">
+<meta property="og:image" content="https://i.postimg.cc/MZ0t97Zx/meta-img.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://rccgtcon.com">
+<meta property="twitter:title" content="RCCG TCON">
+<meta property="twitter:description"
+    content="Welcome to RCCG The Chapel Outreach parish in Norwich, United Kingdom (RCCG TCON). We have the mandate to build people spiritually and train them to discover, develop and deploy their God given gift to serve God and the community. We provide a lovely and friendly atmosphere where people from the various nations of the world can experience the true love of Christ and understand God's purpose for their lives.">
+<meta property="twitter:image" content="https://i.postimg.cc/MZ0t97Zx/meta-img.png">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTR2W7WDHZ"></script>
     <script>
