edit footer + an image

--- a/beliefs.html
+++ b/beliefs.html
@@ -304,8 +304,10 @@
 </div>
 
 <footer>
-  <p>© 2022 -  The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788 </p>   
-</footer>
+  <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
+          </p>
+  <p class="att">Website made by Josh Kalu</p>    
+  </footer>
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
