--- a/gallery.html
+++ b/gallery.html
@@ -136,11 +136,11 @@
     </div>
 </div>
 <br><br><br>
-  <footer>
+<footer>
     <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
-    </p>
-
-</footer>
+            </p>
+    <p class="att">Website made by Josh Kalu</p>    
+    </footer>
 
 </body>
 </html>
