--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
             <br>
             <p>Pastors Kalu and Theodora are the pastors of The Chapel Outreach
                 Norwich with the support of dedicated ministers and volunteers. The
-                Chapel Outreach Norwich started humbly as a student fellowship in March
+                Chapel Outreach Norwich started humbly as a student fellowship in January
                 2010, but by the grace of God, has grown to become a dynamic worship centre.
             </p>
 
         </div>
-        <img src="photos/about-image.png" alt="" class="abt-img">
+        <img src="photos/IMG_0022_edited.jpeg" alt="" class="abt-img">
     </div>
 
     <div class="services" id="services">
@@ -243,10 +243,10 @@
         </div>
     </div>
     <footer>
-        <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
+<p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
         </p>
-
-    </footer>
+<p class="att">Website made by Josh Kalu</p>    
+</footer>
 </body>
 
 </html>
