--- a/mission.html
+++ b/mission.html
@@ -103,8 +103,10 @@
     <p>6. We will pursue these objectives until every Nation in the world is reached for the Lord Jesus Christ</p>
 </div>
 <footer>
-  <p>© 2022 -  The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788 </p>   
-</footer>
+    <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
+            </p>
+    <p class="att">Website made by Josh Kalu</p>    
+    </footer>
 
 </body>
 </html>
