--- a/services.html
+++ b/services.html
@@ -116,7 +116,7 @@
                 <p>Every Sunday</p>
                 <p>1:00PM to 3:00PM</p>
                 <p>RCCG The Chapel Outreach Norwich, Colman Rd, NR4 7HD</p>
-                <img src="photos/about-image.png" alt="" width="45%">
+                <img src="photos/IMG_0022_edited.jpeg" alt="" width="45%">
     
               </div>
               <div class="main-info">
@@ -206,8 +206,9 @@
       </div>
     </div>
     <footer>
-        <p>© 2022 -  The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788 </p>
-          
+      <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
+              </p>
+      <p class="att">Website made by Josh Kalu</p>    
       </footer>
 </body>
 
