--- a/contact.html
+++ b/contact.html
@@ -137,8 +137,9 @@
 </div>
 </div>
 <footer>
-  <p>© 2022 -  The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788 </p>
-    
-</footer>
+    <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
+            </p>
+    <p class="att">Website made by Josh Kalu</p>    
+    </footer>
 </body>
 </html>
