--- a/give.html
+++ b/give.html
@@ -125,8 +125,10 @@
 </div>
 
 <footer>
-  <p>© 2022 -  The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788 </p>   
-</footer>
+    <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
+            </p>
+    <p class="att">Website made by Josh Kalu</p>    
+    </footer>
 
 
 
