--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="notibar.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Primary Meta Tags -->
     <title>RCCG TCON</title>
     <meta name="title" content="RCCG TCON">
@@ -52,6 +54,23 @@
     </script>
 
 <body>
+    <div id="hellobar-bar" class="regular closable">
+        <div class="hb-content-wrapper">
+            <div class="hb-text-wrapper">
+                <div class="hb-headline-text">
+                    <p><span>Join us for our Praise Night on Saturday the 25th of March at 3pm!</span></p>
+                </div>
+            </div>
+            <a href="https://rccgtcon.com/praise" target="_blank" class="hb-cta hb-cta-button">
+                <div class="hb-text-holder">
+                    <p>Find out more</p>
+                </div>
+            </a>
+        </div>
+        <div class="hb-close-wrapper">
+          <a href="javascript:void(0);" class="icon-close" onclick="$('#hellobar-bar').fadeOut()">&#10006;</a>
+        </div>
+    </div>
     <header>
         <div class="navbar">
             <!-- Navbar logo -->
